# SVC16

./: .gitignore  Cargo.toml  README.md  example_projects.md  justfile
emulator/: debug.odin  draw.odin  engine.odin  input.odin  layout.odin  main.odin  sound.odin
examples/example_expansion/: Makefile
examples/example_expansion/c_expansion/: .gitignore  example_expansion.c
examples/example_expansion/go_expansion/: .gitignore  Makefile  expansion.go  expansion.h
examples/example_expansion/rust_expansion/: Cargo.toml
examples/example_expansion/rust_expansion/src/: lib.rs
examples/example_expansion/zig_expansion/: build.zig  build.zig.zon
examples/example_expansion/zig_expansion/src/: root.zig
specification/: specification.typ
src/: cli.rs  engine.rs  expansions.rs  main.rs  ui.rs  utils.rs
