[package]
name = "svc16"
version = "1.2.0"
edition = "2021"
authors = ["Jan Neuendorf"]
description = "An emulator for a simple virtual computer"
license="MIT"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
flate2 = "1.0.35"
gilrs = { version = "0.11.0",optional=true}
macroquad = "0.4.13"
pad = "0.1.6"
rand = "0.9.2"
rodio = "0.21.1"
thiserror = "2.0.3"

[features]
default=[]
gamepad = ["gilrs"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
